syntax = "proto3";

package shuffle.control;

message RoundStart {
    int32 round = 1;
}

message RoundDone {
    int32 round = 1;
    int32 worker_id = 2;
}


message ShuffleMsg {
    oneof payload {
        RoundStart start = 1;
        RoundDone done = 2;
    }
}

service ShuffleControlService {
    rpc GrpcShuffleStreamControl(stream ShuffleMsg) returns (stream ShuffleMsg);
}
